--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -1,17 +1,22 @@
-# Use the official Python image
-FROM python:3.8-slim
+version: '3'
 
-# Set the working directory in the container
-WORKDIR /app
+services:
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "80:80"
 
-# Copy the requirements file into the container at /app
-COPY backend/requirements.txt /app/
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - "5000:5000"
+    depends_on:
+      - database
 
-# Install required dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+  database:
+    image: mongo
+    ports:
+      - "27017:27017"
 
-# Copy the backend code into the container at /app
-COPY backend /app
-
-# Run the Flask application
-CMD ["python", "app.py"]
