--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -1,22 +1,20 @@
-version: '3'
+name: Docker Compose
 
-services:
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "80:80"
+on:
+  push:
+    branches:
+      - main
 
-  backend:
-    build:
-      context: ./backend
-    ports:
-      - "5000:5000"
-    depends_on:
-      - database
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-  database:
-    image: mongo
-    ports:
-      - "27017:27017"
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and run Docker containers
+        run: docker-compose up --build
