--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,14 @@
-name: Docker Compose
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and run Docker containers
-        run: docker-compose up --build
+version: '3'
+services:
+  backend:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    depends_on:
+      - database
+  database:
+    image: mongo
+    ports:
+      - "27017:27017"
